--- a/style.css
+++ b/style.css
@@ -1,6 +1,49 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
+body {
+    font-family: "Roboto", sans-serif;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 60px;
+    background-color: #000;
+    border-bottom-left-radius:  30px;
+    border-bottom-right-radius: 30px;
+}
+
+nav>ul {
+    list-style: none;
+    display: flex;
+    gap: 60px;
+}
+
+nav>ul>li>a {
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 30px;
+    color: #fff;
+}
+
+nav>ul>li>a:hover {
+    color: #ff00ff;
+}
+
+.logo {
+    background-color: #ffdd55;
+    color: #000;
+    font-size: 30px;
+    font-weight: 800;
+    padding: 10px;
+    border: 2px solid #000;
+    border-radius: 15px;
+    box-shadow: 5px 5px #fff;
+}
