--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 }
 
 /* DRY */
+
 .buttons {
     display: flex;
     gap: 40px;
@@ -163,4 +164,89 @@ section.about-me>.container>.text-container>p {
 section.about-me>.container>.text-container>.buttons {
     margin-top: auto;
     margin-bottom: 5px;
+}
+
+/* services section */
+
+.services {
+    text-align: center;
+    padding: 50px 100px;
+    background-color: #eb7711;
+    margin-bottom: 125px;
+}
+
+.services > h1 {
+    font-size: 50px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.services > p {
+    font-size: 20px;
+    font-weight: 700;
+    color: #fff;
+    padding: 0 100px;
+    margin-bottom: 60px;
+}
+
+.services > .container {
+    display: flex;
+    justify-content: center;
+    gap: 100px;
+}
+
+.card {
+    background-color: #a259ff;
+    color: #fff;
+    text-align: left;
+    flex-basis: 275px;
+    border: 3px solid #000;
+    border-radius: 15px;
+    box-shadow: 10px 10px #000;
+    padding: 15px 30px;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+}
+
+.card > .content > h1 {
+    font-size: 30px;
+    /* font-weight: 800; */
+}
+
+.card > .content > p {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.card > .content > button {
+    align-self: stretch;
+    background-color: #ffdd55;
+    font-size: 30px;
+    font-weight: 700;
+    padding: 10px;
+    border-radius: 15px;
+    border: 0;
+}
+
+.card > .number {
+    font-size: 50px;
+    font-weight: 900;
+    background-color: #00c6ae;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    
+    margin: 0 auto;
+    margin-top: -55px;
+    margin-bottom: 12px;
 }
