--- a/style.css
+++ b/style.css
@@ -30,6 +30,19 @@ body {
     box-shadow: 5px 5px #f00;
 }
 
+.logo {
+    background-color: #ffdd55;
+    color: #000;
+    font-size: 30px;
+    font-weight: 800;
+    padding: 10px;
+    border: 2px solid #000;
+    border-radius: 15px;
+    box-shadow:
+        5px 5px #fff,
+        6px 6px #000;
+}
+
 /* header section */
 
 header {
@@ -40,17 +53,6 @@ header {
     background-color: #000;
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
-}
-
-.logo {
-    background-color: #ffdd55;
-    color: #000;
-    font-size: 30px;
-    font-weight: 800;
-    padding: 10px;
-    border: 2px solid #000;
-    border-radius: 15px;
-    box-shadow: 5px 5px #fff;
 }
 
 /* navigation bar */
@@ -277,4 +279,48 @@ section.about-me>.container>.text-container>.buttons {
     box-shadow: -12px 12px 3px #000;
     border-radius: 15px;
     border: 0;
+}
+
+/* footer section  */
+
+footer {
+    padding: 100px 0;
+}
+
+footer > .vertical-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
+
+footer > .vertical-container > .logo-name {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+footer > .vertical-container > .logo-name > .name {
+    font-size: 35px;
+    font-weight: 800;
+}
+
+footer > .vertical-container > p {
+    font-size: 25px;
+    font-weight: 600;
+    width: 500px;
+    text-align: center;
+}
+
+footer > .vertical-container > .icons {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+footer > p {
+    text-align: center;
+    margin-top: 40px;
 }
