--- a/style.css
+++ b/style.css
@@ -109,3 +109,58 @@ section.hero>img {
     box-shadow: 10px 10px #000;
     background-color: #00c6ae;
 }
+
+/* about-me section */
+
+section.about-me {
+    padding-left: 70px;
+    padding-right: 70px;
+    margin-bottom: 150px;
+}
+
+section.about-me>.container {
+    background-color: #106ee8;
+    display: flex;
+    padding: 50px 40px;
+    gap: 40px;
+    border-radius: 15px;
+}
+
+section.about-me>.container>img {
+    width: 350px;
+    border: 3px solid #000;
+    border-radius: 15px;
+    background-color: #00c6ae;
+    transform: scaleX(-1);
+}
+
+section.about-me>.container>.text-container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    color: #fff;
+}
+
+section.about-me>.container>.text-container>h1 {
+    font-size: 50px;
+    font-weight: 800;
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+
+section.about-me>.container>.text-container>div.jobs {
+    font-size: 25px;
+    font-weight: 500;
+    color: #ffdd55;
+    margin-bottom: 20px;
+}
+
+section.about-me>.container>.text-container>p {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+section.about-me>.container>.text-container>.buttons {
+    margin-top: auto;
+    margin-bottom: 5px;
+}
